--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Webpack</title>
+    <title> PlantQuest
+    </title>
   </head>
   <body>
-    <div class="container py-4 px-3 mx-auto">
-      <h1>Hello, Bootstrap and Webpack!</h1>
-      <button class="btn btn-primary">Primary button</button>
+    <div class="container-main">
+      <h1>PlantQuest: Grow a jungle!</h1>
+      <button class="btn.btn-primary">Primary button</button>
     </div>
+   
   </body>
 </html>
